--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass-loader": "11.1.1",
+    "shortid": "^2.2.16",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
