--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Antyfeev96.github.io/ra-props-films",
+  "homepage": "https://Antyfeev96.github.io/ra-props-films",
   "name": "ra-props-films",
   "version": "0.1.0",
   "private": true,
